tests/Fase2-Semantic/error/t15-calling_a_not_declarated_method_from_another_class.ctds
class aux{
	integer y;

	bool greater_than_zero(){
		return true;
	}
}

class main {
	integer x;

	integer add(){
		x = x+1;
		return x;
	}

	void main(){
		aux var;
		x=0;
		var.less_than_one();
	}
	
}
